1998-10-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-parint.ads: Add a parameter RCI to procedure Check to handle
 	differently RCI version checks and SP version checks.

	* s-parint.adb: Same as above. Add a new procedure
	Get_Unit_Version which returns the correct version depending on
	the unit categorization.

1998-10-07  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garrem.adb: Use system to benefit from shell substitution for
	non-local launches.

1998-10-06  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads, s-parint.adb: New subprograms
 	Register_Passive_Package and Get_Passive_Version necessary to pass
 	Shared_Passive LXE ACVC tests.

	* s-garrem.adb: Rewrite launcher so that it strips "`pwd`" for local 
	launch and replaces it by "." (to make it work on NT). Use
	GNAT.OS_Lib.Non_Blocking_Spawn to spawn processes in background.

	* s-gartcp.adb: Open the listening socket in the initialization
	routine to fix a race condition that causes intermittent failures
	with the Ada starter.

1998-10-05  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gardeb.adb: Fix bogus assertion that caused programs to raise
	an assertion error when used in developper mode with no sanity
	directory.

	* s-garter.adb: Do not try to negotiate a global shutdown if
	shutdown is already in progress. Fixes a constraint error at
	shutdown time for the main partition.

	* s-garrem.ads, s-garrem.adb: Remove a lot of unused
	functions. Write local launcher for NT.

	* s-gaplsp.ads.in: Store platform name to be used by the runtime
	for background launching, fixes background launching bug on NT.

1998-09-30  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-rpcpoo.adb: Reformatting.
	
	* s-rpc.adb: Remove Invalidate_RCI_Units and call
 	Units.Invalidate_Partition.
	
	* s-parint.adb: Expand procedure Process or call Get_Unit_Info
 	instead. Move Handle_Request to Garlic.Units. Cleanup of RCI_Info.
	
	* s-garuni.adb, s-garuni.ads: Add procedure Initialize,